# AQI_forecasting

./: .gitattributes  .gitignore  dockerfile  jj local.session.sql  pyproject.toml  requirements.txt
backend/: app.py
backend/data/: bangkok-air-quality_update.csv  dht_sensor.csv
backend/models/: .gitattributes  __init__.py  arima_improve_1.py  arima_improved_2.py  arima_model.py  best_sarima_order.json  data_preprocessing.py  debug_main.py  lstm_model.h5  main.py  modeling.py  sarima_model.pkl  sarima_summary.txt
backend/models/test/: arima_improved_2.py  arima_model.py  evaluate.py  hybird.py  hybrid_arima.py
forntend/: aqi_sample.html  style.css
forntend/web1/: index.html
forntend/web2/: control.html  index.html  location.html  monitoring.html  scripts.js  style.css
forntend/web2/components/: main-content.html  sidebar.html
forntend/web2/components copy/: sidebar.html
notebooks/: arima_exploration.ipynb  debug_model.ipynb  dht_sensor.ipynb  explore.ipynb  latest_arima_model.ipynb  proved_arima.ipynb  update_data_fetch.ipynb
tsoontho/: index.html  style.css
